[package]
name = "oxideav-ico"
version = "0.0.2"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-ico"
homepage = "https://github.com/OxideAV/oxideav-ico"
authors = ["Mark Karpeles"]
description = "Pure-Rust ICO + CUR (Windows icon / cursor) reader + writer for oxideav — multi-resolution, BMP and PNG sub-images"
readme = "README.md"
keywords = ["multimedia", "image", "ico", "cursor", "pure-rust"]
categories = ["multimedia::encoding", "multimedia::images"]

[dependencies]
oxideav-core = "0.1"
oxideav-pixfmt = "0.1"
# Sub-image codecs. These crates are pure-Rust too; between them they
# cover every image payload an ICO / CUR can legally hold.
oxideav-bmp = "0.1"
oxideav-png = "0.1"
